--- a/components/forms/NewDeck/FormAddDeck.css
+++ b/components/forms/NewDeck/FormAddDeck.css
@@ -28,11 +28,13 @@
     width: 20px;
     height: auto;
     margin-left: 5px;
+    opacity: 0.3;
 }
 
 .form_add_deck input[type=checkbox]:checked + label img{
     width: 28px;
     height: auto;
+    opacity: 1;
 }
 
 #add_deck__deckname,
