--- a/components/tables/Results/ResultItem.css
+++ b/components/tables/Results/ResultItem.css
@@ -12,11 +12,11 @@
     font-size: 20px;
 } 
 
-.result_item:hover,
+/* .result_item:hover,
 .result_item:active {
     cursor: pointer;
     opacity: 0.8;
-}
+} */
 
 .result_item__round {
     width: 200px;
