--- a/components/tables/Players/PlayerStatistic.css
+++ b/components/tables/Players/PlayerStatistic.css
@@ -14,7 +14,7 @@
     border: 1px solid lightgray;
     border-radius: 5px;
     margin: 5px;
-    width: 600px;
+    width: auto;
     max-width: 100%;
     min-width: 90%;
     padding: 5px;
@@ -34,5 +34,9 @@
     flex-direction: row;
     justify-content: flex-start;
     column-gap: 10px;
+    margin: 10px;
+}
+
+#active_player__ranks {
     margin: 10px;
 }
