Speicherung in Datenbank funktioniert inkl. Löschen eines Datensatzes; Lazy-Loading hinzugefügt

--- a/components/content/Ranking.css
+++ b/components/content/Ranking.css
@@ -28,3 +28,17 @@
     margin: 20px;
     margin-top: 50px;
 }
+
+.headline {
+    font-family: "Beleren Bold", "Matrix Bold", Helvetica, sans-serif;
+    font-size: 28pt;
+}
+
+.headline_container {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin: 20px 20px 30px 20px;
+}
+
