--- a/components/content/Decks.css
+++ b/components/content/Decks.css
@@ -15,7 +15,7 @@
 
 #deck_container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     justify-content: flex-start;
     column-gap: 50px;
     margin: 10px;
