--- a/components/content/Results.css
+++ b/components/content/Results.css
@@ -1,9 +1,10 @@
 #result_container {
     display: flex;
-    flex-direction: row;
+    flex-direction: column-reverse;
     justify-content: flex-start;
     column-gap: 50px;
     margin: 10px;
+    width: 1100px;
 }
 
 #result_plus_button {
