--- a/components/tables/Results/ResultItem.css
+++ b/components/tables/Results/ResultItem.css
@@ -5,7 +5,7 @@
     border: 1px solid lightgray;
     border-radius: 5px;
     margin: 5px;
-    width: 680px;
+    /* width: 1000px; */
     max-width: 100%;
     min-width: 90%;
     padding: 5px;
@@ -20,14 +20,70 @@
 
 .result_item__round {
     width: 200px;
+    margin-right: 20px;
 }
 
 .result_item__list {
-    width: 400px;
+    /* width: 800px; */
+    width: auto;
+}
+
+.result_item__list_content {
+    display: flex;
+    flex-direction: row;
+}
+
+.result_item__list_player{
+    width: 200px;
+    margin-right: 20px;
+}
+
+.result_item__list_deck{
+    width: 500px;
+    margin-right: 20px;
+}
+
+.result_item__list_power{
+    width: 100px;
+    margin-right: 20px;
+}
+
+/* .result_item button {
+    margin-right: 10px;
+    background-color: #E6E6E6;
+    border: 1px solid #8C8C8C;
+    border-radius: 3px;
+    padding: 3px 7px 3px 7px;
 }
 
 .result_item__remove_button:hover,
-.result_item__remove_button:active {
-    opacity: 0.8;
+.result_item__remove_button:active,
+.result_item__change_button:hover,
+.result_item__change_button:active  {
+    opacity: 0.5;
     cursor: pointer;
+}
+
+.result_item__button_img {
+    width: 16px;
+} */
+
+.result_item__button {
+    margin-right: 10px;
+    background-color: #E6E6E6;
+    border: 1px solid #8C8C8C;
+    border-radius: 3px;
+    padding: 3px 7px 3px 7px;
+    width: 32px;
+}
+
+.result_item__button:hover,
+.result_item__button:active {
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+.result_item__img {
+    width: 16px;
+    margin-right: 5px;
 }
