--- a/components/tables/Results/TableResults.css
+++ b/components/tables/Results/TableResults.css
@@ -3,7 +3,7 @@
     border: 1px solid rgb(235, 235, 235);
     border-radius: 5px;
     margin: 10px;
-    width: 700px;
+    /* width: 1100px; */
     max-width: 100%;
     min-width: 90%;
     padding: 5px;
@@ -16,8 +16,9 @@
     justify-content: flex-start;
     font-family: "Beleren Bold", "Matrix Bold", Helvetica, sans-serif;
     font-size: 24px;
+    margin: 10px;
 }
 
 .table_results__date {
-    margin-right: 120px;
+    margin-right: 225px;
 }
